--- a/app/styles.css
+++ b/app/styles.css
@@ -1,3 +1,13 @@
 .timer-section {
     height: 800px;
 }
+
+.stage {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+}
+
+.stage-scene {
+
+}
