--- a/app/styles.css
+++ b/app/styles.css
@@ -9,5 +9,40 @@
 }
 
 .stage-scene {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    -webkit-transition: all 500ms linear;
+    -moz-transition: all 500ms linear;
+    transition: all 500ms linear;
+    display: flex;
+      align-items: center;
+      justify-content: center;
+}
 
+.stage-scene.active {
+    opacity: 1;
+}
+
+.scene1 {
+    background-color: orange;
+    color: #fff;
+}
+
+.scene2 {
+    background-color: white;
+    color: #666;
+}
+
+.scene3 {
+    background-color: purple;
+    color: #fff;
+}
+
+.scene4 {
+    background-color: green;
+    color: #fff;
 }
