--- a/app/styles.css
+++ b/app/styles.css
@@ -1,3 +1,7 @@
+body {
+    font-family: "Helvetica-neue", helvetica, sans-serif;
+}
+
 .timer-section {
     height: 800px;
 }
@@ -15,12 +19,12 @@
     width: 100%;
     height: 100%;
     opacity: 0;
-    -webkit-transition: all 500ms linear;
-    -moz-transition: all 500ms linear;
-    transition: all 500ms linear;
+    -webkit-transition: all 250ms linear;
+    -moz-transition: all 250ms linear;
+    transition: all 250ms linear;
     display: flex;
-      align-items: center;
-      justify-content: center;
+    align-items: center;
+    justify-content: center;
 }
 
 .stage-scene.active {
