--- a/app/styles.css
+++ b/app/styles.css
@@ -26,8 +26,25 @@ body {
     justify-content: center;
 }
 
-.stage-scene.active {
-    opacity: 1;
+.progress-bar {
+    width: 250px;
+    height: 40px;
+    background-color: #fff;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#004799+0,0075d6+50,ff0000+51,ff0000+100 */
+    background: #004799; /* Old browsers */
+    background: -moz-linear-gradient(left,  red 0%, red 50%, white 51%, white 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,red), color-stop(50%,red), color-stop(51%,white), color-stop(100%,white)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left,  red 0%,red 50%,white 51%,white 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left,  red 0%,red 50%,white 51%,white 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left,  red 0%,red 50%,white 51%,white 100%); /* IE10+ */
+    background: linear-gradient(to right,  red 0%,red 50%,white 51%,white 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='red', endColorstr='white',GradientType=1 ); /* IE6-9 */
+    background-size: 200%;
+}
+
+.welcome {
+    background-color: blue;
+    color: #fff;
 }
 
 .scene1 {
@@ -50,7 +67,7 @@ body {
     color: #fff;
 }
 
-.scene5 {
+.thank-you {
     background-color: red;
     color: #fff;
 }
